--- a/onepixel/index.html
+++ b/onepixel/index.html
@@ -88,35 +88,108 @@
     }
 
     
-    let exit = {x: 14, y: 1};
+    let exit = [
+                {x: 15, y: 14},
+                {x: 15, y: 14},
+                {x: 15, y: 14},
+                {x: 15, y: 14},
+                {x: 14, y: 1},
+                {x: 14, y: 1},
+                {x: 14, y: 1},
+                {x: 14, y: 1},
+                {x: 14, y: 1},
+                {x: 14, y: 1},
+                {x: 14, y: 1},
+                {x: 14, y: 1},
+                {x: 14, y: 1},
+                {x: 14, y: 1},
+                {x: 14, y: 1},
+                {x: 14, y: 1},
+                {x: 14, y: 1},
+                {x: 14, y: 1},
+                ];
 
         const levels =  [//Level0
                             [
                             [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                             [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-                            [0,0,0,0,0,1,1,1,1,0,0,0,0,0,0,0],
-                            [0,0,0,0,0,0,0,0,0,0,0,1,1,1,1,1],
-                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-                            [1,1,1,0,0,0,0,0,0,0,0,0,0,0,0,0],
-                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-                            [0,0,0,0,0,1,0,0,1,0,0,0,0,0,0,0],
-                            [0,0,0,0,0,0,0,0,0,0,0,0,0,1,1,1],
                             [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                             [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-                            [0,0,0,0,0,0,0,0,0,1,1,1,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0],
+                            [0,0,0,0,1,1,1,1,1,1,1,1,0,1,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0],
                             [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                             [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-                            [0,0,0,0,0,0,0,0,0,0,0,0,1,1,1,0],
-                            [1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],
                             ],
-                            //Level1
                             [
                             [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                             [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                             [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                             [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                             [0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0],
-                            [0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0],
+                            [0,0,0,0,1,1,1,1,1,1,1,1,0,1,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [1,1,1,1,1,1,1,0,0,1,1,1,1,1,1,1],
+                            ],
+                            [
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0],
+                            [0,0,0,0,1,1,1,1,1,1,1,1,0,1,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [1,1,1,1,0,1,1,0,1,1,0,1,1,1,1,1],
+                            ],
+                            [
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,1,1,0,1,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,1,0,1,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,1,0,0,1,0,0,0,0,0],
+                            [0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0]
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [1,1,1,1,1,0,0,0,0,0,0,1,1,1,1,1],
+                            ],
+                            [
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,1,1,0,1,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,1,0,1,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,1,0,0,1,0,0],
                             [0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0],
                             [0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0],
                             [0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0],
@@ -181,7 +254,7 @@
                             [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1],
                             [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                             [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-                            [0,0,0,1,0,0,0,0,0,0,0,0,0,0,1,1],
+                            [0,0,0,1,0,0,0,0,1,0,0,0,0,0,1,1],
                             [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                             [1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                             ],
@@ -298,6 +371,24 @@
                             [0,0,1,0,1,0,1,0,1,0,1,0,0,0,0,0],
                             [0,0,0,1,0,1,0,1,0,1,0,1,0,0,0,0],
                             [1,0,0,0,1,0,1,0,1,0,1,0,0,0,0,0],
+                            ],
+                            [
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,1,1,1,1,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,1,1,1,1,1],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [1,1,1,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,1,0,0,1,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,1,1,1],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,1,1,1,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                            [0,0,0,0,0,0,0,0,0,1,0,0,1,1,1,0],
+                            [1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0],
                             ],
                             //Empty:
                             [
@@ -519,7 +610,7 @@
         }
 
 
-        if(Math.hypot(player.position.x - exit.x, player.position.y - exit.y) < 1){
+        if(Math.hypot(player.position.x - exit[player.level].x, player.position.y - exit[player.level].y) < 1){
             player.position.x = startingPosition.x;
             player.position.y = startingPosition.y;
             player.level++;
@@ -555,7 +646,7 @@
                 }
             }
         }
-        const exitPixel = document.getElementById("1-14");
+        const exitPixel = document.getElementById((exit[player.level].y) + "-" + exit[player.level].x);
         exitPixel.style.backgroundColor = 'rgb(256,256,256)';
 
         // console.log(Math.floor(player.position.y) + "-" + Math.floor(player.position.x));
